<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ttac3</name>
  <version>0.0.0</version>
  <description>Control library for TTA_C3</description>
  <maintainer email="shikito.aos@gmail.com">shikito</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <build_depend>ttac3_actions</build_depend>

  <exec_depend>ttac3_actions</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
